      and \code{tools::Rd2ex()} a corresponding \code{commentDonttest},
      with a default such that \code{example(..)} in help examples will
      run \code{\\dontcheck} code only if used interactively.

      \item \code{rbind.data.frame()} gains an optional argument
      \code{make.row.names}, for potential speedup.
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The \code{\\donttest} sections of \R's help files can be
      tested by\cr
      \command{make check TEST_DONTTEST=TRUE}.

      \item It is possible to request the use of system
      \command{valgrind} headers \emph{via} \command{configure} option
      \option{--with-system-valgrind-headers}: note the possible
      incompatibility of such headers discussed in the 'R Installation
      and Administration' manual. (Wish of \PR{16808}.)

      \item The included version of \code{lzmautils} has been updated to
      \code{xz-utils} 5.0.7 (minor bug fixes from 5.0.5).
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item There is support for testing the \code{\\dontrun} and
      \code{\\donttest} parts of examples in packages.

      \code{tools::testInstalledPackage()} accepts new arguments
      \code{commentDontrun = FALSE} and \code{commentDonttest = FALSE}.

      \command{R CMD check} gains options \option{--run-dontrun} and
      \option{--run-donttest}.

      \item The \acronym{HTML} generated by \code{tools::Rd2HTML()} and
      \code{tools::toHTML()} methods is now
      \sQuote{\acronym{XHTML} 1.0 Strict}.

      \item The \pkg{compiler} package has a new utility function
      \code{setCompilerOptions()} now returns the old values
      invisibly. The initial optimization level can also be set with the
      environment variable \env{R_COMPILER_OPTIMIZE}.

      \item \command{R CMD check} gains option \option{--test-dir} to
      specify an alternative set of tests to run.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{