@@ -58,6 +58,7 @@ dounzip-CPPFLAGS=-I../extra/zlib -I../extra/bzip2
 edit-CPPFLAGS=-I../gnuwin32
 grep-CPPFLAGS=-I../extra -I../extra/pcre -I../gnuwin32 -DPCRE_STATIC
 memory-CPPFLAGS=$(malloc-DEFS)
+platform-CPPFLAGS=-I../extra/zlib -I../extra/bzip2 -I../extra/xz/api -I../extra/pcre
 printutils-CPPFLAGS=-I../gnuwin32
 saveload-CPPFLAGS=-I../extra/xdr
 serialize-CPPFLAGS=-I../extra/xdr
